# Android

./: .gitignore  README.md  app.vue  nuxt.config.ts  package.json
assets/styles/: global.scss
assets/styles/components/: navbar.scss  player.scss
assets/styles/pages/: index.scss  search.scss
components/: Navbar.vue  Player.vue
components/icons/: Dots.vue  Pause.vue  Play.vue  Skip.vue
components/icons/Navbar/: HomeFill.vue  HomeOutline.vue  Library.vue  SearchFill.vue  SearchOutline.vue  SettingsFill.vue  SettingsOutline.vue  SongsOutline.vue
layouts/: default.vue
pages/: index.vue  search.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
types/: types.ts
