[package]
name = "vleer"
version = "0.0.1"
description = "Vleer"

[lib]
name = "tauri_app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
