[package]
name = "vleer"
version = "0.0.1"
description = "Vleer"
authors = ["pandadev", "waradu"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
rustube = "0.6.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
